xl-release/9.7/resources/help.md
% XL-RELEASE (1) Container Image Pages
% XebiaLabs Development Team
% 2020-07-16

# NAME
xl-release \- Automate, orchestrate and get visibility into your release pipelines — at enterprise scale

# DESCRIPTION
XebiaLabs develops enterprise-scale Continuous Delivery and DevOps software, providing companies with the visibility, automation and control to deliver software faster and with less risk.

The XL Release product specifically is designed to help users orchestrate complex release pipelines with ease. Some of its key features are:


- Plan, automate, and analyze the entire software release pipeline
- Control and optimize software delivery
- Always know the status of automated and manual steps across the release pipeline
- Identify bottlenecks, reduce errors, and lower the risk of release failures
# ENVIRONMENT VARIABLES
The following environment variables can be set to configure the image for different scenarios

APP_ROOT=/opt/xebialabs
    This environment variable is used to determine the directory where all application specific code will be copied. Normally there is no need to change this variable.

APP_HOME=/${APP_ROOT}/xl-release-server
    This environment variable is used as the landing point for all the application data. Ensure that this is a subdirectory of the ${APP_ROOT} variable. Normally there is no need to change this variable.

# VOLUMES
The following locations can be mounted as volumes to provide either configuration data, and/or persistent storage for application data.

**\${APP_HOME}/conf** - This directory contains the configuration files and keystores for XL Release. If mounted it is possible to configure (and inject) non-default configuration settings.

- The `xl-release.conf` file and `script.policy` is generated by the container startup script based on env variables set, to avoid that you can set the `GENERATE_XL_CONFIG` env variable to `false`. Once you set this the `xl-release.conf` for the product will not be generated based on env variables and you would have to provide these file yourself.
- If you provide a file called `xl-release-server.conf` in the conf folder mounted, you need to provide values for below in that file
 ```
admin.password=admin
client.automatically.map.all.deployables.on.initial=false
client.automatically.map.all.deployables.on.update=false
client.automatically.map.all.deployables=true
client.server_poll.delay=30000
client.session.remember.enabled=true
client.session.timeout.minutes=20
hide.internals=false
http.bind.address=0.0.0.0
http.context.root=/
http.port=5516
http.upload.buffer=262144
importable.packages.path=importablePackages
maintenance.forbidden_paths=deployit/task\:POST,deployit/tasks/v2\:POST,deployit/control\:POST
repository.keystore.password=admin
server.mapping.override.deployed.fields.on.update=true
server.resolve.application.dependencies=true
ssl.mutual=false
ssl=false
threads.max=150
threads.min=30
 ```
 - The below configuration files also can be overwritten by providing the same in the mounted volume. A default will be used for any file not provided in the mounted volume.
   - `logback-access.xml`
   - `logback.xml`
   - `logging.properties`
   - `wrapper-daemon.vm `
   - `xl-release-security.xml`
   - `xl-release.policy`
   - `xlr-wrapper-linux.conf`
   - `xlr-wrapper-win.conf`

**\${APP_HOME}/hotfix** - This directory contains the hotfixes for the libraries & plugins used by XL Release. When instructed by XebiaLabs support personnel, you should drop any delivered hotfixes in here.

**\${APP_HOME}/ext** - This directory contains the developed (exploded plugins) for XL Release. You can customize an existing plugin here, for example you can modify the `synthetic.xml` for a specific plugin here.

**\${APP_HOME}/plugins** - This directory contains the plugins that are running in XL Release. When mounted, plugins present in this directory will be loaded instead of bundled ones. If any base plugin is not provided it will be loaded from default plugins. If you mount an empty directory the default bundled plugins will be loaded. But it is recommended to use a custom image with required plugins to avoid issues during the upgrade process.

**\${APP_HOME}/repository** - This directory contains the embedded repository database for XL Release. Using the configuration injected through the `${APP_HOME}/conf` volume, it is possible to configure the used database to a remotely running database engine, instead of using the embedded memory base one. It is highly recommended not to use the embedded DB for production setup.

**\${APP_HOME}/archive** - This directory contains the embedded archive database for XL Release. Using the configuration injected through the `${APP_HOME}/conf` volume, it is possible to configure the used database to a remotely running database engine, instead of using the embedded memory base one. It is highly recommended not to use the embedded DB for production setup.

**\${APP_HOME}/reports** - The report files generated from XL Release are stored in this folder.

# PORTS
The port that can be exposed by default is `5516`